--- a/ForeScore.WebMVC/Views/Course/Create.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Create.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "Create";
 }
 
+@Styles.Render("~/Content/css")
+
 @using (Html.BeginForm())
 {
     <div class="container">
@@ -251,6 +253,8 @@
 
     </div>
 }
+
+
 
 
 
