--- a/ForeScore.WebMVC/Views/Round/Create.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Create.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Create";
 }
 
+@Styles.Render("~/Content/css")
 <div class="container">
+
     <h2>Select A Course To Log A Round</h2>
     <br />
     <div class="row">
@@ -15,7 +17,7 @@
         </div>
     </div>
     <br />
-    
+
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-primary">
@@ -83,3 +85,4 @@
         </div>
     </div>
 </div>
+
