--- a/ForeScore.WebMVC/Content/Site.css
+++ b/ForeScore.WebMVC/Content/Site.css
@@ -74,8 +74,8 @@ textarea {
 
 .panel-heading {
     color: #ffffff;
-    font-family: Baskerville,Times,'Times New Roman',serif;
-    font-size: 17px;
+    font-family: Georgia,serif;
+    font-size: 25px;
     font-weight: bold;
 }
 
