--- a/ForeScore.WebMVC/Views/Shared/_Layout.cshtml
+++ b/ForeScore.WebMVC/Views/Shared/_Layout.cshtml
@@ -7,11 +7,12 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+
 </head>
 <body>
     <div id="navigation-full">
         <div class="container">
-            <div id="navigation-inputs">
+            <div id="navigation-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
